add translations for application placeholders (#146)
This localizes example values in application form

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -111,3 +111,18 @@
 
 ["We are"]
   other = "Jsme"
+
+["jane.doe@email.com"]
+  other = "jan.novak@email.cz"
+
+["Jane"]
+  other = "Jan"
+
+["Doe"]
+  other = "Novák"
+
+["helpdesk operator"]
+  other = "operátor helpdesku"
+
+["11/08/1986"]
+  other = "08.11.1986"
