Improve statements integration (#174)
Improve statements integration into the web.

- add page listing statements
- improve statements detail page
- focus on functionality around sharing of statements

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]
[anonymized]

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -34,7 +34,7 @@
 ["share on FaceBook"]
   other = "sdílet na Facebooku"
 
-["Share on Twitter"]
+["share on Twitter"]
   other = "sdílet na Twitteru"
 
 ["share on LinkedIn"]
@@ -129,3 +129,21 @@
 
 ["11/08/1986"]
   other = "08.11.1986"
+
+[statements]
+  other = "prohlášení"
+
+["info"]
+  other = "informace"
+
+["published on"]
+  other = "publikováno"
+
+["by"]
+  other = ", "
+
+["Read more"]
+  other = "Pokračovat v čtení"
+
+["More statements"]
+  other = "Další prohlášení"
