--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,6 +1,12 @@
 [register]
   other = "register"
 
+[fill]
+  other = "fill the survey"
+
+[sign]
+  other = "sign petition"
+
 [When]
   other = "When"
 
@@ -35,16 +41,16 @@
   other = "Map"
 
 ["share on FaceBook"]
-  other = "share on FaceBook"
+  other = "Share on FaceBook"
 
 ["share on Twitter"]
-  other = "share on Twitter"
+  other = "Share on Twitter"
 
 ["share on LinkedIn"]
-  other = "share on LinkedIn"
+  other = "Share on LinkedIn"
 
 ["open in"]
-  other = "open in"
+  other = "Open in"
 
 [download]
   other = "download"
@@ -150,3 +156,6 @@
 
 ["More statements"]
   other = "More statements"
+
+["Event Details"]
+  other = "Event Details"
