minor text changes (#182)
Changes based on signal conversation


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -140,10 +140,10 @@
   other = "08.11.1986"
 
 [statements]
-  other = "prohlášení"
+  other = "Prohlášení"
 
 ["info"]
-  other = "informace"
+  other = "Informace"
 
 ["published on"]
   other = "publikováno"
