--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -140,10 +140,10 @@
   other = "11/08/1986"
 
 [statements]
-  other = "statements"
+  other = "Statements"
 
 ["info"]
-  other = "informations"
+  other = "Information"
 
 ["published on"]
   other = "published on"
