--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -152,10 +152,10 @@
   other = "by"
 
 ["Read more"]
-  other = "Read more"
+  other = "Read More"
 
 ["More statements"]
-  other = "More statements"
+  other = "More Statements"
 
 ["Event Details"]
   other = "Event Details"
