Change author and improve statute PDFs (#193)
Improve how are statutes generated and change authors in _package.json_


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/latex/legal.sty
+++ b/latex/legal.sty
@@ -1,6 +1,13 @@
 \usepackage{enumitem}
 \usepackage{amsfonts}
 \usepackage{fontspec}
+\usepackage{needspace}
+
+\widowpenalties 1 10000
+\raggedbottom
+
+\let\svitem\item
+\def\item{\needspace{\baselineskip}\svitem}
 
 %% Basic font
 \setmainfont[
