form cookie consent (#212)
Added text on top of petition widget (based on Signal group discussion)


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -159,3 +159,6 @@
 
 ["Event Details"]
   other = "Detaily akce"
+
+["Petition consent"]
+  other = "Odeslání tohoto formuláře nastaví cookie pro spojení s actionnetwork.org"
