Implement proper consent for petitions (#223)
Implements proper consent flow actionnetwork.org petition embedding.


![petitions](https://github.com/ictunion/main-website/assets/2130305/98b3e91e-e8e5-4c9a-830b-0d8df98c7700)


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -160,5 +160,8 @@
 ["Event Details"]
   other = "Detaily akce"
 
-["Petition consent"]
-  other = "Odeslání tohoto formuláře nastaví cookie pro spojení s actionnetwork.org"
+["Petition Consent"]
+  other = "Podepsání petice vytvárí soubor cookie pro actionnetwork.org"
+
+["Petition Accept"]
+  other = "Souhlasím"
