Improve cookie copy in CS variant (#226)
Just cosmetic improvement to new cookie notice before we tag main with
production.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -161,7 +161,7 @@
   other = "Detaily akce"
 
 ["Petition Consent"]
-  other = "Podepsání petice vytvárí soubor cookie pro actionnetwork.org"
+  other = "Funkcionalita petice vytvárí cookie pro actionnetwork.org"
 
 ["Petition Accept"]
   other = "Souhlasím"
