Changed Email field in form (#244)
This updates the form in an attempt to dissuade ppl from registering
with their employer's address.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -55,6 +55,9 @@
 [download]
   other = "stáhnout"
 
+[PrivateEmail]
+  other = "Soukromý e-mail"
+
 [Email]
   other = "E-mail"
 
@@ -125,7 +128,7 @@
   other = "Jsme"
 
 ["jane.doe@email.com"]
-  other = "jan.novak@email.cz"
+  other = "jan.novak@soukromyemail.cz"
 
 ["Jane"]
   other = "Jan"
