Fix #228: Improve union application (#247)
- Change the "address" to be "contact address" and "adresa" to be
"kontaktní adresa"
- Change the bottom error to state "Before submitting, it is necessary
to agree with the statutes." and to "Před odesláním je třeba souhlasit
se stanovami."
- Mention that if people need to omit some other information from their
application they can contact
[support@ictunion.cz](mailto:support@ictunion.cz)
- Change "Private Email" to "Private/Personal Email"
- Disallow email domains of the workplaces where we organize 

fixes #228


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -31,6 +31,9 @@
 [Address]
   other = "Adresa"
 
+[ContactAddress]
+  other = "Kontaktní Adresa"
+
 [Website]
   other = "Web"
 
@@ -56,7 +59,7 @@
   other = "stáhnout"
 
 [PrivateEmail]
-  other = "Soukromý e-mail"
+  other = "Osobní/soukromý e-mail"
 
 [Email]
   other = "E-mail"
@@ -129,6 +132,9 @@
 
 ["jane.doe@email.com"]
   other = "jan.novak@soukromyemail.cz"
+
+["Email Warning"]
+  other = "Prosím použijte Vaši osobní/soukromou emailovou adresu (nepracovní adresu)"
 
 ["Jane"]
   other = "Jan"
