2024 petition social dialog (#268)
New petition


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -170,7 +170,7 @@
   other = "Detaily akce"
 
 ["Petition Consent"]
-  other = "Funkcionalita petice vytvárí cookie pro actionnetwork.org"
+  other = "Funkcionalita petice vytváří cookie pro actionnetwork.org"
 
 ["Petition Accept"]
   other = "Souhlasím"
