Improve accessibility of shuffled typing (#279)
apply patch from anonymous member.

This improves accessibility on the home animation.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

[anonymized]
[anonymized]

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -127,6 +127,9 @@
 ["require js"]
   other = "Tato stránka vyžaduje JavaScript pro svoji funkcionalitu"
 
+["Who we are"]
+  other = "Kdo jsme"
+
 ["We are"]
   other = "Jsme"
 
