Reduced motions patch (#297)
This come via Signal as a patch from member who doesn't want to interact
with Github.

The idea is to disable animation if client is preferring reduced motion.
It also has minor improvement for clients without JS - displaying static
line of text if JS is not available for doing the animation.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -133,6 +133,9 @@
 ["We are"]
   other = "Jsme"
 
+["ICT workers"]
+  other = "pracující v ICT"
+
 ["jane.doe@email.com"]
   other = "jan.novak@soukromyemail.cz"
 
