feat(registration): add language field (#318)
Fixes #283

It would be great if somebody double-checked that it really sends the
correct values to API


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

[anonymized]

--- a/i18n/cs.toml
+++ b/i18n/cs.toml
@@ -73,6 +73,9 @@
 ["Date of Birth"]
   other = "Datum narození"
 
+["Preferred Language"]
+  other = "Preferovaný jazyk komunikace"
+
 [City]
   other = "Město"
 
