--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -43,8 +43,8 @@
 [Map]
   other = "Map"
 
-["share on FaceBook"]
-  other = "Share on FaceBook"
+["share on Facebook"]
+  other = "Share on Facebook"
 
 ["share on Twitter"]
   other = "Share on Twitter"
